web-infras/parser/tests/fixtures/esprima/expression/primary/object/invalid-setter2/output.txt
[SyntaxError]: Setter must have exactly one formal parameter. (1,13)
1|x = { set y(a, b) {} }
 |           ^
